crates/jsonschema-codegen/tests/ui/invalid_unique_items_value.stderr
error: "yes" is not of type "boolean"
 --> tests/ui/invalid_unique_items_value.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"type":"array","uniqueItems":"yes"}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
