crates/jsonschema-codegen/tests/ui/invalid_unique_items_value.rs
#[jsonschema::validator(schema = r#"{"type":"array","uniqueItems":"yes"}"#)]
struct Validator;

fn main() {}
